--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -11,10 +11,25 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+      <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
 
     <uses-feature
         android:name="android.hardware.camera"
         android:required="true" />
+
+
+  
+
+ 
+    <permission
+        android:name="com.elionhaxhi.ribbit.permission.C2D_MESSAGE"
+        android:protectionLevel="signature" />
+
+    <uses-permission android:name="com.elionhaxhi.ribbit.permission.C2D_MESSAGE" />
 
     <application
         android:name=".RibbitApplication"
@@ -37,7 +52,6 @@
             android:label="@string/title_activity_login"
             android:screenOrientation="portrait" >
         </activity>
-        
         <activity
             android:name="com.elionhaxhi.ribbit.ui.SignUpActivity"
             android:label="@string/title_activity_sign_up"
@@ -47,7 +61,7 @@
         <activity
             android:name="com.elionhaxhi.ribbit.ui.EditFriendsActivity"
             android:label="@string/title_activity_edit_friends"
-            android:parentActivityName="com.elionhaxhi.ribbit.ui.MainActivity" 
+            android:parentActivityName="com.elionhaxhi.ribbit.ui.MainActivity"
             android:screenOrientation="portrait" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -55,7 +69,7 @@
         </activity>
         <activity
             android:name="com.elionhaxhi.ribbit.ui.RecipientsActivity"
-      		android:label="@string/title_activity_reciptient"
+            android:label="@string/title_activity_reciptient"
             android:parentActivityName="com.elionhaxhi.ribbit.ui.MainActivity"
             android:screenOrientation="portrait" >
             <meta-data
@@ -65,12 +79,40 @@
         <activity
             android:name="com.elionhaxhi.ribbit.ui.ViewImageActivity"
             android:label="@string/title_activity_view_image"
-            android:parentActivityName="com.elionhaxhi.ribbit.ui.MainActivity" 
-            android:screenOrientation="portrait">
+            android:parentActivityName="com.elionhaxhi.ribbit.ui.MainActivity"
+            android:screenOrientation="portrait" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.elionhaxhi.ribbit.ui.MainActivity" />
         </activity>
+
+        <service android:name="com.parse.PushService" />
+
+        <receiver android:name="com.parse.ParseBroadcastReceiver" >
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.intent.action.USER_PRESENT" />
+            </intent-filter>
+        </receiver>
+        <receiver
+            android:name="com.parse.ParsePushBroadcastReceiver"
+            android:exported="false" >
+            <intent-filter>
+                <action android:name="com.parse.push.intent.RECEIVE" />
+                <action android:name="com.parse.push.intent.DELETE" />
+                <action android:name="com.parse.push.intent.OPEN" />
+            </intent-filter>
+        </receiver>
+        <receiver
+            android:name="com.parse.GcmBroadcastReceiver"
+            android:permission="com.google.android.c2dm.permission.SEND" >
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+                <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
+
+                <category android:name="com.elionhaxhi.ribbit" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
